--- a/SokaJamur/app/src/main/res/values/strings.xml
+++ b/SokaJamur/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_login_avtivity">LoginAvtivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
 </resources>
