--- a/SokaJamur/app/src/main/res/values/strings.xml
+++ b/SokaJamur/app/src/main/res/values/strings.xml
@@ -12,4 +12,18 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="title_activity_home_user">HomeUser</string>
 
+    <string name="spinner">Spinner</string>
+    <string-array name="pilihan_menu">
+        <item>Pilih</item>
+        <item>Sebelum Barang Dikirim</item>
+        <item>Setelah Barang Dikirim</item>
+    </string-array>
+
+    <string name="spinner2">Spinner2</string>
+    <string-array name="pilihan_menu2">
+        <item>Pilih</item>
+        <item>Sebelum Barang Dikirim</item>
+        <item>Setelah Barang Dikirim</item>
+    </string-array>
+
 </resources>
