Artikel home user

--- a/SokaJamur/app/src/main/res/values/strings.xml
+++ b/SokaJamur/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     </string-array>
     <string name="title_activity_home_admin">HomeAdmin</string>
     <string name="closeDrawer" />
+    <string name="title_activity_detail_artikel_user">DetailArtikelUser</string>
 
 </resources>
